<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>

    <!-- AUTH ACTIVITY LJvmwrQ2hJrDf9n-->
<!--    <string name="google_maps_key">AIzaSyDzwS7ZJ-YjmtgAp-QzZNofatSHH3tUQ-U</string>-->
    <string name="google_maps_key">AIzaSyDO3DmUggUtlQxr2t_oaj-ZHaU_ZQ7E8XU</string>
    <string name="facebook_application_id"
        translatable="false">280637793322639</string>

    <string name="fb_login_protocol_scheme">fb280637793322639</string>
    <string name="title_text">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="sign_in_with_fb">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="connection_error">Connection refused</string>
    <string name="success">Connection success</string>
    <string name="search_restaurant">Search Restaurant</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_access_denied">Location access denied.</string>

    <string name="permission_required">Permission required.</string>

    <string name="location_permission">Location permission required.</string>
    <string name="grant">Grant</string>
    <string name="deny">Deny</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="current_location">Current Location</string>
    <string name="open_now">Open Now</string>
    <string name="close_now">Close now</string>
    <string name="is_eating">is eating at</string>
    <string name="pending">Pending</string>
    <string name="restaurant">Restaurant</string>
    <string name="address">Address</string>
    <string name="call">Call</string>
    <string name="like">Like</string>
    <string name="website">Website</string>
    <string name="unable_to_find_compatible_application">Unable to find compatible application</string>
    <string name="no_website_available">No Website available for this restaurant</string>
    <string name="phone_not_available">Phone number not available</string>
    <string name="settings">Settings</string>
    <string name="setting_dialog_msg">Do you want to enable the notification?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="with">with</string>
    <string name="lunch_time">Lunch Time</string>
    <string name="you_have_lunch_scheduled">You\'ve a lunch scheduled</string>


</resources>
